samples/_failures_safe/1761625416_f50709_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cded57c.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_7cded57c.c:140:19: error: ‘matrix_determ’ undeclared (first use in this function); did you mean ‘matrix_set’?
  140 |         *result = matrix_determ
      |                   ^~~~~~~~~~~~~
      |                   matrix_set
./samples/SAFE/__tmp_7cded57c.c:140:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7cded57c.c:140:32: error: expected ‘;’ at end of input
  140 |         *result = matrix_determ
      |                                ^
      |                                ;
./samples/SAFE/__tmp_7cded57c.c:140:9: error: expected declaration or statement at end of input
  140 |         *result = matrix_determ
      |         ^
./samples/SAFE/__tmp_7cded57c.c:140:9: error: expected declaration or statement at end of input
